Improved documentation for PATCH method
